--- a/assets/css/template-main.css
+++ b/assets/css/template-main.css
@@ -1066,7 +1066,7 @@ dd a {
     body {
         background: url('http://2.bp.blogspot.com/-tCOYeh-SnMY/VIUxkje6KMI/AAAAAAAAUOk/7EGyUMd3FVo/s1600/Bible-open-with-dark-background-small.jpg');
     }
-
+}
 
 
 
