Added flag margin

--- a/assets/css/template-main2.css
+++ b/assets/css/template-main2.css
@@ -1416,6 +1416,7 @@ div#content{
 
 .language-selector img.language-flag {
     width: 30px;
+    margin-right: 5px;
 }
 
 .language-selector .nav, .language-selector .dropdown-menu {
