added css for ad widget to fix the new ad size into container.

--- a/assets/css/template-main2.css
+++ b/assets/css/template-main2.css
@@ -1451,3 +1451,12 @@ div#content{
 .header-social .social-icons { text-align: left !important; }
 
 .site-header .navbar .row { position: relative; }
+
+
+#HTML3 .widget-content{
+    margin:0 !important;
+}
+
+#HTML5 .widget-content{
+    margin:0 !important;
+}
