--- a/assets/css/template-main.css
+++ b/assets/css/template-main.css
@@ -64,7 +64,7 @@ textarea{overflow:auto;vertical-align:top}
 .row:before,.row:after{display:table;content:"";line-height:0}
 .row:after{clear:both}
 [class*="span"]{float:left;min-height:1px;margin-left:20px}
-.container,.navbar-static-top .container,.navbar-fixed-top .container,.navbar-fixed-bottom .container{width:991px !important;} /* adsense size update : default 940px */
+.container,.navbar-static-top .container,.navbar-fixed-top .container,.navbar-fixed-bottom .container{width:991px;} /* adsense size update : default 940px */
 .span12{width:940px}
 .span11{width:860px}
 .span10{width:780px}
