image assets updated to https.

--- a/assets/css/template-main.css
+++ b/assets/css/template-main.css
@@ -1207,7 +1207,7 @@ div.post-avatar {
     background: none repeat scroll 0% 0% #333;
 }
 #related-posts img {
-    background: url('http://1.bp.blogspot.com/-EpAZ7479vZU/U8q4-6oeF5I/AAAAAAAAB2w/mQFhf-xZRko/s1600/background.png') repeat scroll 0% 0% #fff;
+    background: url('https://1.bp.blogspot.com/-EpAZ7479vZU/U8q4-6oeF5I/AAAAAAAAB2w/mQFhf-xZRko/s1600/background.png') repeat scroll 0% 0% #fff;
     display: table-cell;
     text-align: center;
     color: #EB005D;
