--- a/assets/css/template-main2.css
+++ b/assets/css/template-main2.css
@@ -1180,7 +1180,7 @@ small, .small {
 
 body{
 
-    background-image: url(http://4.bp.blogspot.com/-ZiEpBGWo-yA/VJbgvA0GyvI/AAAAAAAAUWc/Oo8-aJBsObA/s1600/bg_ruark3.jpg);
+    background-image: url(https://4.bp.blogspot.com/-ZiEpBGWo-yA/VJbgvA0GyvI/AAAAAAAAUWc/Oo8-aJBsObA/s1600/bg_ruark3.jpg);
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -1205,7 +1205,7 @@ body{
 }
 
 .navbar.navbar-default {
-    background-image: url(http://4.bp.blogspot.com/-3V85zfKh6EM/VH6FNcCp_8I/AAAAAAAAULs/YNJNqfce-fM/s320/png_dark.png);
+    background-image: url(https://4.bp.blogspot.com/-3V85zfKh6EM/VH6FNcCp_8I/AAAAAAAAULs/YNJNqfce-fM/s320/png_dark.png);
     background-color: #3f3f3f;
     font-family: 'Open Sans', serif;
     margin-bottom: 0;
@@ -1217,7 +1217,7 @@ body{
 }
 
 #colophon{
-    background-image: url(http://4.bp.blogspot.com/-3V85zfKh6EM/VH6FNcCp_8I/AAAAAAAAULs/YNJNqfce-fM/s320/png_dark.png);
+    background-image: url(https://4.bp.blogspot.com/-3V85zfKh6EM/VH6FNcCp_8I/AAAAAAAAULs/YNJNqfce-fM/s320/png_dark.png);
     -moz-box-shadow:    inset 0 0 175px 67px #000000;
     -webkit-box-shadow: inset 0 0 175px 67px #000000;
     box-shadow:         inset 0 0 175px 67px #000000;
